--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,18 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "google-genai>=1.19.0",
-    "marimo>=0.13.15",
-    "pydantic>=2.11.5",
-]
 
 [dependency-groups]
 dev = [
+    "marimo>=0.13.15",
     "ruff>=0.6.0",
     "pyright>=1.1.350",
+]
+
+[tool.uv.workspace]
+members = [
+    "src",
+    "examples"
 ]
 
 [tool.ruff]
