Fix UV Setup to Allow IDE Type Checking to Work Better

--- a/examples/pyproject.toml
+++ b/examples/pyproject.toml
@@ -8,7 +8,4 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-jitter = { workspace = true }
-
-[tool.uv]
-package = true
+jitter = { path = "..", editable = true }
