--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,13 @@
 [project]
-name = "pljam"
+name = "jitter"
 version = "0.1.0"
-description = "Add your description here"
+description = "LLM-assisted function implementation generation"
 readme = "README.md"
 requires-python = ">=3.12"
+dependencies = [
+    "google-genai>=1.19.0",
+    "pydantic>=2.11.5",
+]
 
 [dependency-groups]
 dev = [
@@ -12,11 +16,14 @@ dev = [
     "pyright>=1.1.350",
 ]
 
-[tool.uv.workspace]
-members = [
-    "src",
-    "examples"
-]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.sdist]
+include = ["src/jitter"]
+[tool.hatch.build.targets.wheel]
+packages = ["src/jitter"]
 
 [tool.ruff]
 line-length = 120
