--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,21 @@
 [project]
-name = "jitter"
+name = "jitter-llm"
 version = "0.1.0"
-description = "LLM-assisted function implementation generation"
+description = "Build your program Just-in-Time with LLM Assistance"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
+authors = [{ name = "Jason Steving", email = "jasonmail99@gmail.com" }]
+classifiers = [
+    "License :: OSI Approved :: Apache Software License",
+    "Development Status :: 3 - Alpha",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: User Interfaces",
+    "Intended Audience :: Developers",
+]
+license = { file = "LICENSE" }
 dependencies = [
     "google-genai>=1.19.0",
     "pydantic>=2.11.5",
@@ -16,6 +28,9 @@ dev = [
     "pyright>=1.1.350",
 ]
 
+[project.urls]
+Homepage = "https://github.com/JasonSteving99/Jitter"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -24,6 +39,16 @@ build-backend = "hatchling.build"
 include = ["src/jitter"]
 [tool.hatch.build.targets.wheel]
 packages = ["src/jitter"]
+
+# I'll use this to deploy test versions to testpypi via:
+# $ uv build
+# $ uv publish --index=testpypi
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true  # Ensure that uv doesn't pull any deps from testpypi without me noticing.
+
 
 [tool.ruff]
 line-length = 120
