--- a/examples/pyproject.toml
+++ b/examples/pyproject.toml
@@ -4,8 +4,8 @@ version = "0.0.0"
 description = "Example usages of Jitter"
 requires-python = ">=3.12"
 dependencies = [
-    "jitter",
+    "jitter-llm",
 ]
 
 [tool.uv.sources]
-jitter = { path = "..", editable = true }
+jitter-llm = { path = "..", editable = true }
