--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "jitter-llm"
-version = "0.1.0"
+version = "0.2.0"
 description = "Build your program Just-in-Time with LLM Assistance"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -21,12 +21,22 @@ dependencies = [
     "pydantic>=2.11.5",
 ]
 
+[project.optional-dependencies]
+# Users don't need to install these deps unless they want to use Jitter as a cli tool
+# to generate program scaffolding that can be implemented seamlessly with Jitter.
+cli = ["claude-code-sdk>=0.0.10", "asyncclick>=8.1.8"]
+
 [dependency-groups]
 dev = [
     "marimo>=0.13.15",
     "ruff>=0.6.0",
     "pyright>=1.1.350",
+    "asyncclick>=8.1.8",
+    "claude-code-sdk>=0.0.10",
 ]
+
+[project.scripts]
+jitter = "jitter.scaffold:main"
 
 [project.urls]
 Homepage = "https://github.com/JasonSteving99/Jitter"
